feat: form input control in books component

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -2,7 +2,7 @@
   <div class="filterSection">
     <div class="searchBox">
       <ng-icon class="searchIcon" name="lucideSearch"/>
-      <input type="text" placeholder="Buscar por título ou autor" class="searchInput"/>
+      <input type="text" placeholder="Buscar por título ou autor" class="searchInput" [(ngModel)]="search"/>
     </div>
   </div>
 
