--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -54,6 +54,11 @@
   flex-wrap: wrap;
 }
 
+.genreFilterContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
 .filterIcon {
   width: 1.25rem;
   height: 1.25rem;
@@ -89,6 +94,15 @@
 
 .buttonInactive:hover {
   background-color: #e5e7eb;
+}
+
+.action {
+  border-radius: 1rem;
+  background-color: oklch(0.35 0.12 258);
+}
+
+.action:hover {
+  scale: 105%;
 }
 
 .resultsInfo {
