feat: login page

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -25,7 +25,7 @@
 
   <div class="resultsInfo">
     <p class="resultsText">
-      Mostrando <span class="highlight">{{ books.length }}</span> de <span class="highlight">TODO</span> livros
+      Mostrando <span class="highlight">{{ books.length }}</span> de <span class="highlight">{{ books.length }}</span> livros
     </p>
   </div>
 
