feat: new genre pipe

--- a/src/app/books/book-item/book-item.component.html
+++ b/src/app/books/book-item/book-item.component.html
@@ -13,7 +13,7 @@
   <div class="details">
     <div class="detailRow">
       <span class="label">Ano de publicação:</span>
-      <span class="value">{{ book.dataPublicacao }}</span>
+      <span class="value">{{ book.dataPublicacao | date }}</span>
     </div>
     <div class="detailRow">
       <span class="label">Páginas:</span>
