feat: auth service, interceptors, login and logout with api spring

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,14 @@
       <h2>{{ title() }}</h2>
       <p>{{ subtitle() }}</p>
     </div>
-    @if (showLoginBtn()) {
-      <a href="/login" class="loginButton">
+    @if (!isAuthenticated()) {
+      <button (click)="login()" class="loginButton">
         Login
-      </a>
+      </button>
+    } @else {
+      <button (click)="logout()" class="loginButton">
+        Logout
+      </button>
     }
   </div>
 </header>
