feat: edit page, put endpoint, and form initialization

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -38,6 +38,7 @@
       @for (book of books(); track book.id) {
         <app-book-item
            [book]="book"
+           (edit)="onEdit($event)"
            (delete)="onDeleteRequest(book.id!)">
         </app-book-item>
       }
