feat: crud de autores

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -59,7 +59,7 @@ header {
 }
 
 .userName {
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: 500;
   color: #1f2937;
 }
@@ -83,4 +83,27 @@ header {
 .userContainer {
   display: flex;
   gap: 0.5rem;
+}
+
+.autoresButton {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.625rem 1.25rem;
+  background-color: #10b981;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s;
+  text-decoration: none;
+}
+
+.autoresButton:hover {
+  background-color: #0c875e;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
