--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,6 +19,8 @@
           }
         </div>
 
+        <a routerLink="/autores" class="autoresButton">Autores</a>
+
         <button class="loginButton" (click)="logout()">Sair</button>
       </div>
    } @else {
